force-app/main/default/objects/Torc_Config__c/Torc_Config__c.object-meta.xml
<CustomObject>
    <label>Torc Config</label>
    <nameField>
        <label>Torc Platform Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torc Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>