force-app/main/default/objects/Torc_Config__c/fields/Access_Token_Expiry_At__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Expiry_At__c</fullName>
    <label>Access Token Expiry At</label>
    <type>DateTime</type>
</CustomField>