force-app/main/default/objects/Torc_Config__c/fields/Authentication_URL__c.field-meta.xml
<CustomField>
    <fullName>Authentication_URL__c</fullName>
    <label>Authentication URL</label>
    <type>Url</type>
</CustomField>