force-app/main/default/objects/Torc_Config__c/fields/Operations_URL__c.field-meta.xml
<CustomField>
    <fullName>Operations_URL__c</fullName>
    <label>Operations URL</label>
    <type>Url</type>
</CustomField>