force-app/main/default/objects/Torc_Config__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>155</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>