force-app/main/default/objects/Torc_Config__c/fields/Previous_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Previous_Access_Token__c</fullName>
    <label>Previous Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>